[Password Manager] Only consider best matches in the bubble on automatic save

Previously, the bubble would merge the pending credentials into the
password list too. However, the pending credentials are not guaranteed
to have a valid primary key, which results in duplicates and ineffective
rows, particularily when a password is generated.

Bug: 878729
Change-Id: I68da172ce02a21a5127132d291c68ddfbf017999
Reviewed-on: https://chromium-review.googlesource.com/1202283
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Christos Froussios <cfroussios@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#588498}(cherry picked from commit 8d36bcad737cbc1182011bb4b438ede5557dd30d [formerly 30cfcbcf45f2fed4446e5cc477884f2c1b7905d2])
Reviewed-on: https://chromium-review.googlesource.com/1212847
Reviewed-by: Christos Froussios <cfroussios@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#128}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: f121855126ad29ea5c238147a7c5eaf60a6160da